# CS-Pipeline

./: .gitignore  README.md  merge_era5_and_co2_proc.ipynb  notebook.ipynb  pyproject.toml
carbonpipeline/: api_request.py  cli.py  config.py  constants.py  downloader.py  processing.py  processing_utils.py  processor.py
carbonpipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inference/: igbp_inspection.ipynb  testbench_inference.ipynb
inference/carboninference/: constants.py  core.py
pipeline/: download_config.yaml  process_config.yaml  pyproject.toml  simplified.geojson  web_scrapping.ipynb  wtd_processing.ipynb
pipeline/carbonpipeline/: __init__.py  api_request.py  argparser.py  cli.py  config.py  core.py  dataset.py  downloader.py  main.py  processing_utils.py
pipeline/carbonpipeline/Geometry/: geometry.py  geometry_processor.py
pipeline/carbonpipeline/Processing/: constants.py  processing_utils.py  processor.py
pipeline/research/: era5-logs.md
research/: era5-logs.md
