[project]
name = "carbonpipeline"
version = "0.1.0"
description = "A pipeline to fill missing values in CarbonSense dataset"
readme = "README.md"
dependencies = [
    "cdsapi",
    "xarray",
    "numpy<2",                       
    "pandas>=2.0.3,<3",              
    "numexpr",                       
    "eccodes",
    "ipykernel",
    "netCDF4",
    "timezonefinder",
    "beautifulsoup4",
    "pyyaml",
    "rioxarray",
    "dask"
]

[project.scripts]
carbonpipeline = "carbonpipeline.main:run"

[tool.setuptools]
packages = ["carbonpipeline"]
